[gd_scene load_steps=5 format=1]

[ext_resource path="res://main_scene.gd" type="Script" id=1]
[ext_resource path="res://fonts/Asap-Bold.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]

font/size = 24
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]

font/size = 24
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 2 )

[node name="screen" type="Node2D"]

script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"Script" }
num_bunnies = 250

[node name="gui_layer" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="bg_panel" type="Panel" parent="gui_layer"]

visibility/opacity = 0.7
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 640.0
margin/bottom = 30.0

[node name="fps_label" type="Label" parent="gui_layer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 0.0
margin/right = 130.0
margin/bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "FPS:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="count_label" type="Label" parent="gui_layer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 460.0
margin/top = 0.0
margin/right = 640.0
margin/bottom = 30.0
custom_fonts/font = SubResource( 2 )
text = "COUNT:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


